# web-service-rs-template

./: .env.sample  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
src/: cli.rs  config.rs  database.rs  error.rs  http.rs  lib.rs  main.rs  state.rs
xtask/: Cargo.toml
xtask/src/: main.rs
